# Dynamic-VisuAnalyzer

./: CMakeLists.txt  DynamicVisuAnalyzer.pro  README.md  dvadata.cpp  dvadata.h  dynamicvisuanalyzer.cpp  dynamicvisuanalyzer.h  dynamicvisuanalyzer.ui  main.cpp
Widgets/: dvafourpaneview.cpp  dvafourpaneview.h  dvafourpaneview.ui  dvaprogramablewidget.cpp  dvaprogramablewidget.h  dvaprogrammablewidget.cpp  dvaprogrammablewidget.h  dvaprogrammablewidget.ui  skullwidget.cpp  skullwidget.h  skullwidget.ui
